--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
 <p>Keehong Youn</p>
 <p>I develop realtime audiovisual softwares</p>
-<p>&#121;&#107;&#101;&#101;&#104;&#64;&#105;&#99;&#108;&#111;&#117;&#100;&#46;&#99;&#111;&#109;</p>
+<p>keehong@ucsb.edu</p>
 <p><a href="pdf/Resume_Keehong_Youn.pdf">Resume</a></p>
 
 </body>
